hphp/test/zend/good/Zend/tests/bug43332_2.php.expectf

Fatal error: Class undefined: foobar\stdclass in %s/bug43332_2.php on line 10
